--- a/todo-app.postman_collection.json
+++ b/todo-app.postman_collection.json
@@ -35,7 +35,7 @@
 				"method": "GET",
 				"header": [],
 				"url": {
-					"raw": "http://127.0.0.1:8000/api/tasks/1",
+					"raw": "http://127.0.0.1:8000/api/tasks/2",
 					"protocol": "http",
 					"host": [
 						"127",
@@ -47,7 +47,7 @@
 					"path": [
 						"api",
 						"tasks",
-						"1"
+						"2"
 					]
 				}
 			},
@@ -56,7 +56,7 @@
 		{
 			"name": "update",
 			"request": {
-				"method": "POST",
+				"method": "PUT",
 				"header": [],
 				"body": {
 					"mode": "raw",
@@ -68,7 +68,7 @@
 					}
 				},
 				"url": {
-					"raw": "http://127.0.0.1:8000/api/tasks/",
+					"raw": "http://127.0.0.1:8000/api/tasks/2",
 					"protocol": "http",
 					"host": [
 						"127",
@@ -80,7 +80,7 @@
 					"path": [
 						"api",
 						"tasks",
-						""
+						"2"
 					]
 				}
 			},
@@ -89,10 +89,23 @@
 		{
 			"name": "delete",
 			"request": {
-				"method": "GET",
+				"method": "DELETE",
 				"header": [],
 				"url": {
-					"raw": ""
+					"raw": "http://127.0.0.1:8000/api/tasks/3",
+					"protocol": "http",
+					"host": [
+						"127",
+						"0",
+						"0",
+						"1"
+					],
+					"port": "8000",
+					"path": [
+						"api",
+						"tasks",
+						"3"
+					]
 				}
 			},
 			"response": []
